--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,25 +5,81 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plant Tracker</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="public\style.css">
 </head>
 
 <body>
-  <header>
-    <h1>Welcome to the Plant Tracker</h1>
-  </header>
-  <nav>
-    <a href="/">Home</a>
-  </nav>
-  <main>
-    <aside>
-      <h2>Lets get green with Plants.</h2>
-    </aside>
-    <div>
-      {{{body}}}
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">&#127793;
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Login/Signup</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Users</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Plants</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Add Your Plant</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="User Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-  </main>
+  </nav>
+
+  <header class="container-fluid">
+    <section class="row justify-content-center">
+      <div class="text-center">
+        <img src="public\images\logo.png" class="img-fluid" alt="plant tracker logo">
+      </div>
+    </section>
+  </header>
+
+  <main>
+    <section class="row justify-content-center">
+    <div class="card col-3">
+     <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+     <h2></h2>
+    </div>
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2</h2>
+    </div>
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
+  </section>
+    <section class="row justify-content-center">
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
+  </section>
+</main>
 </body>
 
 </html>
