--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
   <title>Plant Tracker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="public\style.css">
+  <link rel="stylesheet" type="text/css" href="\style.css">
 </head>
 
 <body>
@@ -45,40 +45,13 @@
   <header class="container-fluid">
     <section class="row justify-content-center">
       <div class="text-center">
-        <img src="public\images\logo.png" class="img-fluid" alt="plant tracker logo">
+        <img src="\images\logo.png" class="img-fluid" alt="plant tracker logo">
       </div>
     </section>
   </header>
 
   <main>
-    <section class="row justify-content-center">
-    <div class="card col-3">
-     <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
-     <h2></h2>
-    </div>
-    <div class="card col-3">
-      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
-      <h2</h2>
-    </div>
-    <div class="card col-3">
-      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
-      <h2></h2>
-    </div>
-  </section>
-    <section class="row justify-content-center">
-    <div class="card col-3">
-      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
-      <h2></h2>
-    </div>
-    <div class="card col-3">
-      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
-      <h2></h2>
-    </div>
-    <div class="card col-3">
-      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
-      <h2></h2>
-    </div>
-  </section>
+   {{{body}}}
 </main>
 </body>
 
