login js and login handlebars basics

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -25,4 +25,4 @@
       <img src="\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
       <h2></h2>
     </div>
-  </se
+    </section>
