added routes to main handlebars and plant and plants routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Login/Signup</a>
+            <a class="nav-link active" aria-current="page" href="/login">Login/Signup</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Users</a>
+            <a class="nav-link" href="/users/">Users</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Plants</a>
+            <a class="nav-link" href="/plants/">Plants</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Add Your Plant</a>
