added additional handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
             <a class="nav-link" href="/plants/">Plants</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Add Your Plant</a>
+            <a class="nav-link" href="/addPlant">Add Your Plant</a>
           </li>
         </ul>
         <form class="d-flex">
