--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -26,3 +26,56 @@
       <h2></h2>
     </div>
     </section>
+
+
+{{!-- <section class="row justify-content-center">
+    <div class="card col-3" style="width: 18rem;">
+  <img src="\images\img300placeholder.png" class="card-img-top img-fluid p-2 imgSize" alt="placeholder">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    
+   
+  </div>
+</div>
+    <div class="card col-3" style="width: 18rem;">
+  <img src="\images\img300placeholder.png" class="card-img-top img-fluid p-2 imgSize" alt="placeholder">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    
+   
+  </div>
+</div>
+    <div class="card col-3" style="width: 18rem;">
+  <img src="\images\img300placeholder.png" class="card-img-top img-fluid p-2 imgSize" alt="placeholder">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    
+   
+  </div>
+</div>
+    <div class="card col-3" style="width: 18rem;">
+  <img src="\images\img300placeholder.png" class="card-img-top img-fluid p-2 imgSize" alt="placeholder">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    
+   
+  </div>
+</div>
+    <div class="card col-3" style="width: 18rem;">
+  <img src="\images\img300placeholder.png" class="card-img-top img-fluid p-2 imgSize" alt="placeholder">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    
+   
+  </div>
+</div>
+    <div class="card col-3" style="width: 18rem;">
+  <img src="\images\img300placeholder.png" class="card-img-top img-fluid p-2 imgSize" alt="placeholder">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    
+   
+  </div>
+</div>
+   
+</section> --}}
