--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,49 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
+
+
+  <section id="login" class="container">
+    <div class="row justify-content-center">
+<div class="login-card col" >
+  <div class="card-body ">
+    <h2 class="card-title">Login</h2>
+    <div class="p-1"> 
+      <label for="email-login">Email:</label>
+        <input type="text" id="email-login" />
+    </div>
+    <div class="p-1">
         <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Name:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
+        <input type="password" id="password-login" />
+        </div>
+    <a href="#" class="btn btn-success ">Login</a>
   </div>
 </div>
+
+
+ 
+<div class="row justify-content-center">
+ <div class="login-card col">
+  <div class="card-body">
+    <h2 class="card-title">Signup</h2>
+    <div class="p-1"> 
+      <label for="username-signup">Name:</label>
+        <input type="text" id="username-signup" />
+    </div>
+    <div class="p-1">
+        <label for="email-signup">Email:</label>
+        <input type="text" id="email-signup" />
+        </div>
+    <div class="p-1">
+        <label for="password-signup">Password:</label>
+        <input type="password" id="password-signup" />
+        </div>
+    <a href="#" class="btn btn-success ">Signup</a>
+  </div>
+  </div>
+</div>
+</div>
+
+</section>
+
+
+ 
 
 <script src="./js/login.js"></script>
