update to add plant

--- a/views/plant.handlebars
+++ b/views/plant.handlebars
@@ -1,3 +1,11 @@
 {{#each plants as |plant|}}
-    {{plant}}
+   <div class="card col-3">
+      <img src="\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
 {{/each}}
+
+
+
+<h1>hi</h1>
+
