update to login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,42 @@
 
 
-  <section id="login" class="container">
-    <div class="row justify-content-center">
-<div class="login-card col" >
-  <div class="card-body ">
-    <h2 class="card-title">Login</h2>
-    <div class="p-1"> 
-      <label for="email-login">Email:</label>
-        <input type="text" id="email-login" />
-    </div>
-    <div class="p-1">
+<section id="login" class="container">
+  <div class="row justify-content-center">
+    <div class="login-card col" >
+      <form class="card-body ">
+        <h2 class="card-title">Login</h2>
+        <div class="p-1"> 
+          <label for="email-login">Email:</label>
+          <input type="text" id="email-login" />
+        </div>
+      <div class="p-1">
         <label for="password-login">Password:</label>
         <input type="password" id="password-login" />
         </div>
-    <a href="#" class="btn btn-success ">Login</a>
-  </div>
-</div>
+        <a href="#" class="btn btn-success ">Login</a>
+      </form>
+    </div>
 
 
  
 <div class="row justify-content-center">
  <div class="login-card col">
-  <div class="card-body">
+  <form class="card-body">
     <h2 class="card-title">Signup</h2>
-    <div class="p-1"> 
-      <label for="username-signup">Name:</label>
+      <div class="p-1"> 
+        <label for="username-signup">Name:</label>
         <input type="text" id="username-signup" />
-    </div>
-    <div class="p-1">
+      </div>
+      <div class="p-1">
         <label for="email-signup">Email:</label>
         <input type="text" id="email-signup" />
-        </div>
-    <div class="p-1">
+      </div>
+      <div class="p-1">
         <label for="password-signup">Password:</label>
         <input type="password" id="password-signup" />
-        </div>
-    <a href="#" class="btn btn-success ">Signup</a>
-  </div>
+      </div>
+        <a href="#" class="btn btn-success ">Signup</a>
+  </form>
   </div>
 </div>
 </div>
