updated plant handlebar

--- a/views/plant.handlebars
+++ b/views/plant.handlebars
@@ -1,10 +1,13 @@
 <div class="container">
-   {{!-- {{#each plants as |plant|}} --}}
    <section class="row justify-content-center">
+       {{#each plants as |plant|}} 
    <div class="card">
-      {{!-- {{/each}} --}}
+      <h2>{{plant.name}}</h2>
+     
+   
 
    </div> 
+     {{/each}} 
    </section>
 
 </div>
