--- a/views/addPlant.handlebars
+++ b/views/addPlant.handlebars
@@ -2,15 +2,22 @@
   <div class="row justify-content-center">
     <form class="column">
       <div class="mb-3 text-center">
-      <input type="search" placeholder="Begonia" aria-label="Add Plant"/>
+                  <label for="plantname">Add Plant:</label>
+
+      <input id="plantname" type="search" placeholder="Begonia" aria-label="Add Plant"/>
+                
+
+</div>
+<div class="mb-3 text-center">
+            <label for="nickname">Nickname:</label>
+
+      <input id="nickname" type="text" placeholder="Nickname" aria-label="Add Plant"/>
       
 </div>
 <div class="mb-3 text-center">
-      <input type="text" placeholder="Nickname" aria-label="Add Plant"/>
-      
-</div>
-<div class="mb-3 text-center">
-      <input type="text" placeholder="Notes" aria-label="Add Plant"/>
+          <label for="notes">Add Notes:</label>
+
+      <input id="notes" type="text" placeholder="Notes" aria-label="Add Plant"/>
 </div>
 <div class="mb-3 text-center">
       <button class="btn-md btn-success" type="submit">Add Plant</button>
