--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
 <section id="login" class="container">
   <div class="row justify-content-center">
     <div class="login-card col" >
-      <form class="card-body ">
+      <form class="card-body login-form">
         <h2 class="card-title">Login</h2>
         <div class="p-1"> 
           <label for="email-login">Email:</label>
@@ -13,15 +13,16 @@
         <label for="password-login">Password:</label>
         <input type="password" id="password-login" />
         </div>
-        <a href="#" class="btn btn-success ">Login</a>
+        <button class="btn btn-success" type="submit">Login</button>
       </form>
+    </div>
     </div>
 
 
  
 <div class="row justify-content-center">
  <div class="login-card col">
-  <form class="card-body">
+  <form class="card-body signup-form">
     <h2 class="card-title">Signup</h2>
       <div class="p-1"> 
         <label for="username-signup">Name:</label>
@@ -35,9 +36,9 @@
         <label for="password-signup">Password:</label>
         <input type="password" id="password-signup" />
       </div>
-        <a href="#" class="btn btn-success ">Signup</a>
+        <button class="btn btn-success" type="submit"> Signup</button>
   </form>
-  </div>
+  
 </div>
 </div>
 
