add route, single plant handlebar

--- a/views/plant.handlebars
+++ b/views/plant.handlebars
@@ -2,7 +2,7 @@
    <section class="row justify-content-center">
        {{#each plants as |plant|}} 
    <div class="card">
-      <h2>{{plant.name}}</h2>
+      <a href="/plants/{{plant.id}}" ><h2>{{plant.name}}</h2></a>
 
    </div> 
      {{/each}} 
