--- a/views/plant.handlebars
+++ b/views/plant.handlebars
@@ -1,8 +1,8 @@
 <div class="container">
    <section class="row justify-content-center">
        {{#each plants as |plant|}} 
-   <div class="card">
-      <a href="/plants/{{plant.id}}" ><h2>{{plant.name}}</h2></a>
+   <div class="text-center">
+      <a href="/plants/{{plant.id}}" id="planter" ><h2>&#127807;{{plant.name}}</h2></a>
 
    </div> 
      {{/each}} 
