--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,28 +1,28 @@
  <section class="row justify-content-center">
     <div class="card col-3">
-     <img src="\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+     <img src="https://inaturalist-open-data.s3.amazonaws.com/photos/26707624/medium.jpg" class="img-fluid p-2 imgSize" alt="placeholder">
      <h2></h2>
     </div>
     <div class="card col-3">
-      <img src="\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <img src="https://inaturalist-open-data.s3.amazonaws.com/photos/45444/medium.jpg" class="img-fluid p-2 imgSize" alt="placeholder">
       <h2</h2>
     </div>
     <div class="card col-3">
-      <img src="\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <img src="https://inaturalist-open-data.s3.amazonaws.com/photos/37802552/medium.jpeg" class="img-fluid p-2 imgSize" alt="placeholder">
       <h2></h2>
     </div>
   </section>
     <section class="row justify-content-center">
     <div class="card col-3">
-      <img src="\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <img src="https://inaturalist-open-data.s3.amazonaws.com/photos/37802552/medium.jpeg" class="img-fluid p-2 imgSize" alt="placeholder">
       <h2></h2>
     </div>
     <div class="card col-3">
-      <img src="\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <img src="https://inaturalist-open-data.s3.amazonaws.com/photos/22327/medium.jpg" class="img-fluid p-2 imgSize" alt="placeholder">
       <h2></h2>
     </div>
     <div class="card col-3">
-      <img src="\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <img src="https://inaturalist-open-data.s3.amazonaws.com/photos/11763754/medium.jpg" class="img-fluid p-2 imgSize" alt="placeholder">
       <h2></h2>
     </div>
     </section>
