--- a/public/style.css
+++ b/public/style.css
@@ -10,9 +10,10 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.imageSize{
-  max-width: 300px;
-  max-height: 300px;
+.imgSize{
+  height: 300px;
+  width: auto;
+  
   
 }
 
