added add.js, updated seeds data, updated plant route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,10 +29,10 @@
             <a class="nav-link" href="/plants/">Plants</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/addPlant">Add Your Plant</a>
+            <a class="nav-link" href="/addplant">Add Your Plant</a>
           </li>
         </ul>
-        {{log this}}
+        
       {{#if logged_in}}
         <button class="btn btn-success" id="logout">Logout</button>
        {{/if}}
