--- a/views/addPlant.handlebars
+++ b/views/addPlant.handlebars
@@ -1,6 +1,6 @@
 <section class="container">
   <div class="row justify-content-center">
-    <form class="column">
+    <form class="column" id="addplant">
       <div class="mb-3 text-center">
                   <label for="plantname">Add Plant:</label>
 
@@ -25,3 +25,5 @@
     </form>
   </div>
 </section>
+
+<script src="./js/add.js"></script> 
