--- a/public/style.css
+++ b/public/style.css
@@ -48,3 +48,9 @@ text-decoration: none !important;
 color: rgb(0,102,0);
 }
 
+#namestyle{
+  text-decoration: none;
+  font-size: xx-large;
+  color: rgb(0,102,0);
+}
+
