removed mailto from user.name

--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -1,14 +1,14 @@
 <div class="container">
    <section class="row justify-content-center">
-       {{#each users as |user|}} 
-   <div class="text-center" id="namestyle">
-    
-      <a href=“mailto{{user.email}}” id="namestyle">👨‍🌾{{user.name}}</a>
-      <br>
+      {{#each users as |user|}}
+      <div class="text-center" id="namestyle">
 
-   </div> 
-     {{/each}} 
-     
+         <h3>👨‍🌾{{user.name}}</h3>
+         <br>
+
+      </div>
+      {{/each}}
+
    </section>
 
 </div>
