completed route for single plant page"

--- a/views/plant.handlebars
+++ b/views/plant.handlebars
@@ -2,7 +2,7 @@
    <section class="row justify-content-center">
        {{#each plants as |plant|}} 
    <div class="text-center">
-      <a href="/plants/{{plant.id}}" id="planter" ><h2>&#127807;{{plant.name}}</h2></a>
+      <a href="/plants/{{plant.name}}" id="planter" ><h2>&#127807;{{plant.name}}</h2></a>
 
    </div> 
      {{/each}} 
