--- a/views/addPlant.handlebars
+++ b/views/addPlant.handlebars
@@ -4,7 +4,7 @@
       <div class="mb-3 text-center">
                   <label for="plantname">Add Plant:</label>
 
-      <input id="plantname" type="search" placeholder="Begonia" aria-label="Add Plant"/>
+      <input id="plantname" type="search" placeholder="Plant" aria-label="Add Plant"/>
                 
 
 </div>
